[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Spells/Command.gd" type="Script" id=1]
[ext_resource path="res://Sprites/misc/flashy.png" type="Texture" id=2]
[ext_resource path="res://Sprites/misc/Sigil02.png" type="Texture" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, -0.847515, 0, 0, Vector2( 0.413043, 0.990909 ), 0.119481, 0.119481, 0, 0, Vector2( 1, 0 ), -2.06631, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 1, 0 )
spread = 21.24
gravity = Vector3( 0, -0.308, 0 )
initial_velocity = 0.83
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_no_depth_test = true
flags_albedo_tex_force_srgb = true
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 1, 0.0627451, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.2, 0.2 )

[sub_resource type="Animation" id=6]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CursorContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.3, 0.3, 0.3 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_no_depth_test = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_no_depth_test = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )

[node name="Command" type="Spatial"]
script = ExtResource( 1 )

[node name="Particles" type="Particles" parent="."]
visible = false
amount = 16
lifetime = 2.8
speed_scale = 4.96
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 6 )

[node name="CursorContainer" type="Spatial" parent="."]

[node name="InteractableCursor" type="MeshInstance" parent="CursorContainer"]
transform = Transform( 2.13884, 0, 0, 0, 2.13884, 0, 0, 0, 2.13884, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="AttackableCursor" type="MeshInstance" parent="CursorContainer"]
transform = Transform( 2.13884, 0, 0, 0, 2.13884, 0, 0, 0, 2.13884, 0, 0, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="TTL" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="TTL" to="." method="conclude"]
